@@ -107,6 +107,6 @@ script:
   - "scripts/setupDevpiServer.sh"
   - "reahl upload -sdXru"
 #  - "reahl shell -sdXg -- reahl devpitest --for-current-python-only"
-  - "(cd reahl-dev; reahl shell -sXg -- reahl devpitest --for-current-python-only)"
-  - "(cd reahl-doc; reahl shell -sXg -- reahl devpitest --for-current-python-only)"
-  - "(cd reahl-bzrsupport; reahl shell -sXg -- reahl devpitest --for-current-python-only)"
+  - "(cd reahl-dev; reahl devpitest --for-current-python-only)"
+  - "(cd reahl-doc; reahl devpitest --for-current-python-only)"
+  - "(cd reahl-bzrsupport; reahl devpitest --for-current-python-only)"
