@@ -8,6 +8,7 @@ python-reahl (4.0.0) unstable; urgency=low
  * Upgraded JQueryUI to 1.12.0, but trimmed it down to only the widget factory.
  * Upgraded version of BeautifulSoup to 4.4 for python 3.5 compatibility.
  * Added arguments to 'reahl devpitest' command and an option to run tox on ly on current python environment.
+ * Removed the file_finder for bzr, roll your own instead: http://code.activestate.com/recipes/577910-bazaar-as-a-setuptools-file-finder/.
 
  -- Iwan Vosloo <iwan@reahl.org>  Thu, 12 Jun 2016 08:47:00 +0200
 
